--- a/src/GuiApp/Avalonia/FileTime.GuiApp.App/Resources/Styles.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp.App/Resources/Styles.axaml
@@ -1,7 +1,7 @@
 <Styles
     xmlns="https://github.com/avaloniaui"
-    xmlns:interactions="clr-namespace:FileTime.Core.Interactions;assembly=FileTime.Core.Abstraction"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:interactions="clr-namespace:FileTime.Core.Interactions;assembly=FileTime.Core.Abstraction">
     <Styles.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -60,10 +60,21 @@
     </Style>
 
     <Style Selector="Grid.SidebarContainerPresenter">
+        <Setter Property="Cursor" Value="Hand" />
         <Setter Property="Background" Value="#01000000" />
     </Style>
 
     <Style Selector="Grid.SidebarContainerPresenter:pointerover">
+        <Setter Property="Background" Value="{DynamicResource AppBackgroundColor}" />
+    </Style>
+
+    <Style Selector="Grid.IconButton">
+        <Setter Property="Background" Value="#01000000" />
+        <Setter Property="Width" Value="36" />
+        <Setter Property="Height" Value="36" />
+        <Setter Property="Cursor" Value="Hand" />
+    </Style>
+    <Style Selector="Grid.IconButton:pointerover">
         <Setter Property="Background" Value="{DynamicResource AppBackgroundColor}" />
     </Style>
 
@@ -86,10 +97,12 @@
                 <ControlTemplate>
                     <Border>
                         <RadioButton
+                            VerticalAlignment="Center"
                             Foreground="{DynamicResource ForegroundBrush}"
-                            IsChecked="{Binding Path=IsSelected, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
-                            VerticalAlignment="Center">
-                            <TextBlock Text="{Binding Text}" x:DataType="interactions:IOptionElement" />
+                            IsChecked="{Binding Path=IsSelected, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}">
+                            <TextBlock
+                                x:DataType="interactions:IOptionElement"
+                                Text="{Binding Text}" />
                         </RadioButton>
                     </Border>
                 </ControlTemplate>
@@ -100,9 +113,9 @@
     <Style Selector="Image.LoadingAnimation">
         <Style.Animations>
             <Animation
-                Duration="0:0:2"
                 Easing="QuadraticEaseInOut"
-                IterationCount="INFINITE">
+                IterationCount="INFINITE"
+                Duration="0:0:2">
                 <KeyFrame Cue="0%">
                     <Setter Property="RotateTransform.Angle" Value="45" />
                 </KeyFrame>
